[project]
name = "arxivcleantex"
version = "0.1.0"
description = "ArxivCleanTex — a Streamlit web app: upload your LaTeX project as a .zip and download a cleaned, arXiv-ready .zip."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv-latex-cleaner>=1.0.11",
    "streamlit>=1.58.0",
]

[tool.uv]
package = false
